--- a/templates/git_r8.html
+++ b/templates/git_r8.html
@@ -38,7 +38,7 @@
                 <video
                     id="vid"
 {#                    src="static/nature_test.mp4"#}
-                    src="{{ url_for('static', filename='nature_test.mp4') }}"
+                    src="{{ url_for('static', filename='demo.mp4') }}"
                     preload="auto"
                     response-type="arraybuffer"
                     loop
