--- a/templates/gpt_generated.html
+++ b/templates/gpt_generated.html
@@ -53,7 +53,7 @@
 {#        position="50 150 0"#}
 {#      >#}
 {#      </a-entity>#}
-        <a-video src="{{ url_for('static', filename='nature_test.mp4') }}" width="16" height="9" position="0 0
+        <a-video src="{{ url_for('static', filename='demo.mp4') }}" width="16" height="9" position="0 0
         0"></a-video>
     </a-nft>
     <!-- Create the Static Camera -->
