--- a/templates/git_r8.html
+++ b/templates/git_r8.html
@@ -53,7 +53,7 @@
             <a-marker
                 type="pattern"
                 preset="custom"
-                url="static/pattern-OK.patt"
+                url="static/pattern-demo_shiva.patt"
                 videohandler
                 smooth="true"
                 smoothCount="10"
