--- a/templates/git_r8.html
+++ b/templates/git_r8.html
@@ -53,7 +53,7 @@
             <a-marker
                 type="pattern"
                 preset="custom"
-                url="static/pattern+QR-2.patt"
+                url="static/final.patt"
                 videohandler
                 smooth="true"
                 smoothCount="10"
