--- a/templates/git_r8.html
+++ b/templates/git_r8.html
@@ -38,7 +38,7 @@
                 <video
                     id="vid"
 {#                    src="static/Mercedes.mp4"#}
-                    src="{{ url_for('static', filename='Mercedes.mp4') }}"
+                    src="{{ url_for('static', filename='Smartr.mp4') }}"
                     preload="auto"
                     response-type="arraybuffer"
                     loop
@@ -53,7 +53,7 @@
             <a-marker
                 type="pattern"
                 preset="custom"
-                url="static/final.patt"
+                url="static/pattern-Smartr_ar_mr_raw.patt"
                 videohandler
                 smooth="true"
                 smoothCount="10"
